PA_Education/TestMenifest/force-app/main/default/objects/Payment_Schedule__c/Payment_Schedule__c.object-meta.xml
<CustomObject>
    <label>Payment Schedule</label>
    <nameField>
        <displayFormat>PS{YYYY}{MM}{DD}-{00}</displayFormat>
        <label>대금 지급일정 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>