PA_Education/TestMenifest/force-app/main/default/objects/Payment_Schedule__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <label>지급일자</label>
    <type>Date</type>
</CustomField>