PA_Education/TestMenifest/force-app/main/default/objects/Payment_Schedule__c/fields/fm_UnPaidPayment__c.field-meta.xml
<CustomField>
    <fullName>fm_UnPaidPayment__c</fullName>
    <formula>Payment_due__c -  Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>미지급</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>