PA_Education/TestMenifest/force-app/main/default/objects/Payment_Schedule__c/fields/IsPayment__c.field-meta.xml
<CustomField>
    <fullName>IsPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>지급여부</label>
    <type>Checkbox</type>
</CustomField>