PA_Education/TestMenifest/force-app/main/default/objects/Payment_Schedule__c/fields/IsSentTax__c.field-meta.xml
<CustomField>
    <fullName>IsSentTax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>접수여부</label>
    <type>Checkbox</type>
</CustomField>