PA_Education/TestMenifest/force-app/main/default/objects/Payment_Schedule__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <label>지급금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>