PA_Education/TestMenifest/force-app/main/default/objects/Payment_Schedule__c/fields/Payment_DueDate__c.field-meta.xml
<CustomField>
    <fullName>Payment_DueDate__c</fullName>
    <label>지급 예정 일자</label>
    <type>Date</type>
</CustomField>