PA_Education/TestMenifest/force-app/main/default/objects/Payment_Schedule__c/fields/subcontracting_contract__c.field-meta.xml
<CustomField>
    <fullName>subcontracting_contract__c</fullName>
    <label>하도급 계약</label>
    <referenceTo>subcontracting_contract__c</referenceTo>
    <relationshipName>Payment_Schedule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>