PA_Education/TestMenifest/force-app/main/default/objects/Payment_Schedule__c/fields/Tax_invoice_date__c.field-meta.xml
<CustomField>
    <fullName>Tax_invoice_date__c</fullName>
    <label>세금계산서 접수일자</label>
    <type>Date</type>
</CustomField>