PA_Education/TestMenifest/force-app/main/default/objects/Payment_Schedule__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>단계구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>착수금</fullName>
            </value>
            <value>
                <fullName>중도금</fullName>
            </value>
            <value>
                <fullName>잔금</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>